--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  uuid: ^3.0.4
   google_fonts: ^2.1.0
   flutter_modular: ^3.1.1+1
   dio: ^4.0.0
@@ -16,6 +17,7 @@ dependencies:
   flutter_masked_text: ^0.8.0
   image_picker: ^0.8.1+3
   modal_bottom_sheet: ^2.0.0
+  cached_network_image: ^3.0.0
   rxdart: ^0.27.1
   geocoding: ^2.0.0
 
@@ -39,8 +41,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
